[package]
name = "async-spdk"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
futures-lite = "1.11"
spdk-sys = { path = "spdk-sys" }

[dev-dependencies]
env_logger = "0.8"
