[package]
name = "async-spdk"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>", "Juguang Yan <coolyanjg@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
futures-lite = "1.11"
spdk-sys = { path = "spdk-sys" }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
tokio = {version = "1.21", features = ["full"]}

[dev-dependencies]
env_logger = "0.8"